update service tests